# fauxspark

./: .gitignore  .release-please-config.json  CHANGELOG.md  README.md  dag.json  dag2.json  fetch.py  main.py  match.py  models.py  net.py  pyproject.toml  sim.py
.github/workflows/: release-please.yml
examples/complex/: README.md  dag.json
examples/shuffle/: README.md  dag.json
examples/simple/: README.md  dag.json
fauxspark/: dag.json  dist.py  exceptions.py  executor.py  logic.py  main.py  models.py  play.py  py.py  scheduler.py  util.py
