[project]
name = "fauxspark"
version = "0.1.0"
description = "A Spark simulation framework using SimPy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.5",
    "simpy>=4.1.1",
    "colorama>=0.4.6",
    "pydantic>=2.11.9",
]

[project.scripts]
sim = "fauxspark.main:cli"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
