[project]
name = "fauxspark"
version = "0.0.1"
description = "A Spark simulation framework using SimPy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.5",
    "simpy>=4.1.1",
    "colorama>=0.4.6",
    "pydantic>=2.11.9",
    "types-colorama>=0.4.15.20250801",
]

[project.scripts]
sim = "fauxspark.main:cli"

[tool.uv]
package = true

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
# disallow_untyped_defs = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
